# gist

./: .gitignore  Cargo.toml  README.md  output.txt
docs/: 2026-03-25-codewalk-meerkat-plan.md
src/: ai.rs  config.rs  db.rs  main.rs  models.rs  utils.rs  viewer.rs
src/codewalk/: agent.rs  app.rs  claude.rs  deep_audit.rs  export.rs  meerkat_spike.rs  mod.rs  prompt.rs  recon.rs  repo.rs  session.rs  types.rs  ui.rs
tests/: cli_tests.rs
