[package]
name = "gist"
version = "0.1.0"
edition = "2021"
authors = ["jamesr@ideasx.com"]
description = "A simple CLI to store, search, update, and retrieve gists with AI-powered tagging."

[features]
meerkat = ["dep:meerkat", "dep:meerkat-core", "dep:meerkat-store", "dep:async-trait"]

[dependencies]
meerkat = { version = "0.4", features = ["jsonl-store"], optional = true }
meerkat-core = { version = "0.4", optional = true }
meerkat-store = { version = "0.4", features = ["jsonl"], optional = true }
async-trait = { version = "0.1", optional = true }
clap = { version = "4.1", features = ["derive"] }
rusqlite = "0.29.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
dir = "0.1.2"
home = "0.5.11"
ratatui = "0.29.0"
crossterm = "0.29.0"
chrono = "0.4.40"
colored = "3.0.0"
dirs = "6.0.0"
clipboard = "0.5.0"
toml = "0.8"
syntect = "5.0"
futures-util = "0.3"
ignore = "0.4"
